# agent-from-scratch

./: .gitignore  README.md  main.py  project.md  pyproject.toml  tools.py
src/: graph_agent.py  tools.py  trading_agent.py
