[tool.poetry]
name = "2025"
version = "0.1.0"
description = ""
authors = ["shubhammandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.5"
streamlit = "^1.41.1"
yfinance = "^0.2.51"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
