[tool.poetry]
name = "agents-from-scratch"
version = "0.1.0"
description = ""
authors = ["shubhammandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.6"
streamlit = "^1.41.1"
yfinance = "^0.2.51"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
